# the-speechwriter

./: .clang-format  CMakeLists.txt  README.md
qml/: main.qml
qml/logic/: Document.qml
qml/logic/components/: SimpleButton.qml
qml/logic/delegates/: SentenceDelegate.qml
qml/ui/: DocumentForm.ui.qml
qml/ui/components/: SimpleButtonForm.ui.qml
qml/ui/delegates/: SentenceDelegateForm.ui.qml
src/: application.cpp  application.h  main.cpp
src/controllers/: application.cpp  application.h  document.cpp  document.h
src/data/: sentence.cpp  sentence.h
src/models/: sentencesmodel.cpp  sentencesmodel.h
